<resources>
    <!-- Title Resources -->
    <string name="app_name">HomEz</string>
    <string name="title_activity_register">Create Account</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_chore">Chores</string>
    <string name="title_activity_status">Status</string>
    <string name="title_activity_bill_split">Bill Split</string>
<<<<<<< HEAD
    <string name="title_activity_bill_split_create">Create Charge</string>
=======
    <string name="title_activity_bill_split_create">Bill Split Create</string>
>>>>>>> cd97c449b00593313cd090767c48e490cc6d2cf4
    <string name="title_activity_house">Choose House</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_house">Join House</string>
    <string name="new_house">New House</string>
    <string name="join_house_prompt">
        "House already set up?\n Join it here!"
    </string>
    <string name="join_house_note">
        "House IDs are six digits long and can be found under:\n"
        "Dashboard &#x2192; Settings"
    </string>
    <string name="new_house_prompt">
        "First roommate here?\nCreate a new house!"
    </string>
    <string name="new_house_note">
        "If your roommates already use HomEz,\n"
        "ask them for the House ID and enter it in Join House"
    </string>

    <string name="Charge">Charge</string>
    <string name="Pay">Pay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="house_id">House ID</string>
    <string name="house_name">House Name</string>
    <string name="welcome">Welcome!</string>
    <string name="my_pending_chores">My Pending Chores</string>
    <string name="my_completed_chores">My Completed Chores</string>
    <string name="all_pending_chores">All Pending Chores</string>
    <string name="all_completed_chores">All Completed Chores</string>

    <string name="your_balance">Your Balance:</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="away">Away</string>
    <string name="home">Home</string>
    <string name="dash">-</string>
    <string name="add">Add</string>
    <string name="save_changes">Save Changes</string>
    <string name="continue_string">Continue</string>
    <string name="add_chore">Add Chore</string>
    <string name="save_chore">Save Chore</string>
    <string name="remind">Remind</string>


</resources>
